<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdQuestion">

    <TextView
        android:id="@+id/questionThirdTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textQuestionThirdTV"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/answersThirdRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionThirdTV"
        android:layout_marginTop="10sp">

        <RadioButton
            android:id="@+id/answerThirdOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerThirdOne"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answerThirdTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerThirdTwo"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answerThirdThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerThirdThree"
            android:textSize="16sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>