<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthQuestion">

    <TextView
        android:id="@+id/questionFourthTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textQuestionFourthTV"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/answersFourthRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionFourthTV"
        android:layout_marginTop="10sp">

        <RadioButton
            android:id="@+id/answerFourthOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerFourthOne"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answerFourthTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerFourthTwo"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/answerFourthThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnswerFourthThree"
            android:textSize="16sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>